# brainmep-nas

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  visualization-notes.md
brainmepnas/: __init__.py  abstractmodel.py  abstractmodelstudy.py  accuracymetrics.py  combinedmetrics.py  dataset.py  hardwaremetrics.py  metrics.py  mltkhardwaremetrics.py  testbenchhardwaremetrics.py  tf_utils.py  visualization.py
brainmepnas/hardwaremetrics_implementations/: __init__.py  _mltk.py  _remote_testbench.py
brainmepnas/modelstudy/: __init__.py  get_hardware_metrics.py  init_trial.py  setup_model_study.py
examples/epidenet_nas/: README.md  basemodelstudy.py  cpu_modelstudy.py  gpu_modelstudy.py  setup.py  test_visualization.py
examples/pre_process_chb_mit/: README.md  pre_process_chb_mit.py  process_features.py  process_time_series.py
tests/: audio_example1_SOURCE.md  badmodelstudy.py  dummymodelstudy1.py  goodmodelstudy.py  remotetestbench_EXAMPLE.ini  test_abstractmodelstudy.py  test_accuracymetrics.ods  test_accuracymetrics.py  test_combinedmetrics.py  test_dataset.py  test_hardwaremetrics.py  test_metrics.ods  test_metrics.py  test_mltkhardwaremetrics.py  test_testbenchhardwaremetrics.py
tests/hardwaremetrics_implementations/: audio_example1.tflite  test_hardwaremetrics_mltk.py  test_hardwaremetrics_testbench.py
